# Repo-Onboarding-Agent

./: .gitignore  App.jsx  CODEBASE_ONBOARDING_AGENT_REVAMP_SPEC.md  CODEBASE_ONBOARDING_AGENT_SPEC.md  CODEBASE_ONBOARDING_AGENT_SPEC_V3.md  DependencyGraphView.jsx  InputScreen.jsx  README.md  dep_real.jsx  dependncy2.jsx  lov.jsx
backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/.next/: _events_10921.json
backend/app/: code_explorer.py  config.py  embeddings.py  llm.py  main.py
backend/app/agents/: code_explorer.py  external_context.py  supervisor.py
backend/app/chains/: analysis_chains.py  diagram_chain.py  flow_trace_chain.py  merge_chain.py  node_label_chain.py  start_here_chain.py
backend/app/graph/: blast_radius.py  graph_builder.py  js_parser.py  python_parser.py
backend/app/ingestion/: chunker.py  repo_loader.py  vector_store.py
backend/app/integrations/: sheets_logger.py
backend/app/models/: schemas.py
backend/app/routes/: integration.py  onboard.py
backend/app/tools/: code_tools.py  external_tools.py
backend/static/: 404.html  index.html  index.txt
backend/static/404/: index.html
backend/static/_not-found/: index.txt
backend/static/assets/: index-DPWewq1u.css  index-gsOD3OSz.js
backend/static/workspace/: index.html  index.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: features.tsx  graph-background.tsx  hero.tsx  how-it-works.tsx  live-preview.tsx  processing-screen.tsx  (+3 more)
(+32 files in other folders)
