[project]
name = "backend"
version = "0.2.0"
description = "Codebase Onboarding Agent - AI-powered repository exploration"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.50",
    "langchain>=1.3.10",
    "langchain-chroma>=0.2.2",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "chromadb>=1.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "langchain-mistralai>=1.1.5",
    "langchain-groq>=1.1.3",
]
